--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="lib/httpclient-4.0.3.jar"/>
 	<classpathentry kind="lib" path="lib/httpcore-4.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/httpmime-4.0.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/postgresql-8.4-702.jdbc4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
